# rust_stdcall

./: .gitignore  Cargo.toml  README.md  build.rs  rust_stdcall.def  rust_stdcall.idl  use_dll.bas
src/: lib.rs
