[package]
name = "rust_stdcall"
version = "0.1.0"
authors = ["derrickturk <dwt@terminusdatascience.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "oaidl", "oleauto", "winerror"]

[lib]
crate-type = ["cdylib"]
